# mailpar

./: Cargo.toml  a.py  pyproject.toml  setup.py
.github/workflows/: CI.yml
src/: css.rs  deferral.rs  html.rs  lib.rs
