[package]
name = "mailpar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mailpar"
crate-type = ["cdylib"]

[dependencies]
html-escape = "0.2.13"
lazy_static = "1.4.0"
lol_html = "0.4.0"
mailparse = "0.13.8"
owning_ref = "0.4.1"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
